# inquest

./: .eslintrc.json  .gitignore  LICENSE  Makefile  README.md  dev.Dockerfile  docker-compose.env  docker-compose.yml  prettier.config.js  prod.Dockerfile  pytest.ini  requirements.txt  setup.cfg  sonar-project.properties
backend/: .eslintrc.js  .prettierignore  Makefile  README.md  jest.config.js  ormconfig.js  package.json  schema.graphql  tsconfig.json
compose/: build.yml  latest.yml
docker/: dev.Dockerfile  prod.Dockerfile
docs/: Dockerfile  Makefile  (+3 more)
probe/: Makefile  README.md  output.profile  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
probe/examples/: example_installation.py  fibonacci.py  heartbeat.py
probe/inquest/: __init__.py  file_module_resolver.py  file_sender.py  hotpatch.py  logging.py  main.py  model.py  module_tree.py  parse_fstring.py  probe.py  runner.py
probe/inquest/comms/: client_consumer.py  client_provider.py  exception_sender.py  heartbeat.py  log_sender.py  module_sender.py  trace_set_subscriber.py  utils.py  version_checker.py
probe/inquest/examples/: heartbeat.py
probe/inquest/injection/: ast_injector.py  code_reassigner.py  codegen.py
probe/inquest/test/: absolutize_test.py  ast_injector_test.py  ast_test.py  diff_test.py  embed_fstring_test.py  embed_in_function_test.py  module_tree_test.py  parse_fstring_test.py  probe_test.py  sample.py  test_codegen.py
probe/inquest/test/embed_test_module/: test_unimported_module.py
probe/inquest/utils/: chunk.py  exceptions.py  has_stack.py  logging.py
(+188 files in other folders)
