[tool.poetry]
name = "inquest"
version = "0.4.3"
description = ""
authors = ["Shalom Yiblet <shalom.yiblet@gmail.com>"]
license = "LGPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
aiohttp = "^3.6.2"
janus = "^0.5.0"
gql = { version = '3.0.0a0', allow-prereleases = true }

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.11.0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
astpretty = "^2.0.0"
astor = "^0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
